Changelog Notes:
Fix trait description "Super Immune"
Make Quick and Slow worker mutually exclusive.
Remove Exclusivity from Prone To Illness and Immunocompromised.
Increase range for Ingenuitive percentile recipes.
Make Injured and Broke Leg traits mutually exclusive to Indefatigable to prevent abuse.
Prepared: Camping now gives a Small Hiking Bag instead of a Regular Hiking Bag.
Prepared: Bag now gives a Regular Hiking Bag instead of a Big Hiking Bag.
Prepared: Carpentry no longer gives a Crowbar.
Refactor Prowess traits to properly increase durability of respective weapons.
Redo math calculations for Martial Artist to prevent scaling from being exponential instead of linear.
reduce Max damage scaling for Martial Artist.
Try to prevent Specialization from robbing all xp.
Fix BatteringRam allowing players to stay invisible to Zombies.
Reduce base chance for Depressive to trigger so it's less annoying.
Gourmand's Fresh Food Find effect now properly works in Multiplayer.
Reduce severity of Slow Worker.
Reduce strength of Quick Worker.
Tune Battering Ram making zombies lose interest in player.
Slightly increase the amount of damage Glass Body can take before risking broken bones.
Reduce cost of Super-Immune from 10 to 8 points, since people consistently pointed out Evasive effectively does the same thing, but with better odds.
Increase buffer for Specialization traits to prevent underflow xp.
Fix Grave Robber loot table range not actually being able to roll a 100.
Nerf Human Meat.
Add new trait: Mundane
Adjusted costs of some traits.
Add new trait: Burn Ward Patient - for the masochists out there!
Add new trait: Deprived