@@ -165,6 +165,8 @@ UI_EN = {
     UI_trait_burneddesc = "You begin the game covered head-to-toe in burns.<br>This is not for the feint of heart. Burns take a long time to heal and will make walking, fighting, or performing tasks excruciatingly slow.<br>Your wounds will be bandaged initially.<br>This trait can not be taken alongside Injured or Broke Leg, as it overrides those wounds. It is however worth considerably more than those two traits combined.",
     UI_trait_deprived = "Deprived",
     UI_trait_depriveddesc = "You begin the game with absolutely nothing - not even clothes!",
+    UI_trait_fitted = "Well-Fitted",
+    UI_trait_fitteddesc = "Worn clothing weights half as much and does not impose any speed penalty.",
     UI_MoreTraits_Options_ScroungerAnnounce = "Announce Scrounger and Incomprehensive",
     UI_MoreTraits_Options_ScroungerAnnounce_ToolTip = "If you have the Scrounger or Incomprehensive trait, you will be notified if item(s) are found or lost.",
     UI_MoreTraits_Options_ScroungerHighlight = "Highlight Scrounger Containers",
