@@ -18,14 +18,15 @@ description=The mod also attempts to add a greater variety of expense, as in the
 description=
 description=[h1]Known Issues[/h1]
 description=[list]
-description=[*] Bouncer trait knocks prone zombies back up.
-description=[*] Specialization traits cause players in Multiplayer to lose their XP boost from books.
+description=[*] Bouncer trait knocks prone zombies back up. (Waiting for reports from players to confirm this is fixed.)
+description=[*] Specialization traits cause players in Multiplayer to lose their XP boost from books. (Waiting for reports from players to confirm this is fixed.)
 description=[/list]
 description=
 description=[h1]Mod Compatibility: [/h1]
 description=[list]
 description=[*] Dynamic Traits  - Is now officially supported and the mod will opt to use their Alcoholic trait over its own. The author of Dynamic Traits is also currently working on implementing dynamic addition and removal of other traits from this mod, but that is still WIP.
 description=[*] The Only Cure - ei; the Amputation mod is now officially supported, and the mod will opt to use their amputation method instead of its own.
+description=[*] Mod Options - Allows for Client-Side settings to be adjusted. Install if you would like extra options.
 description=[/list]
 description=
 description=[h1]Opening The Project Up To The Community: [/h1]
@@ -54,8 +55,8 @@ description=Additional Coding:
 description=SteadySpring
 description=Xenu47
 description=Aristrofl
-description=Vaikke
-description=
+description=Vaikke
+description=
 description=Translations:
 description=Simplified Chinese, by EndsM
 description=Russian, by Xenu47
