@@ -26,3 +26,4 @@ Add new trait: Mundane
 Adjusted costs of some traits.
 Add new trait: Burn Ward Patient - for the masochists out there!
 Add new trait: Deprived
+Add new trait: Well-Fitted
